// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Axentix/Components/Button Circle 1`] = `
<button
  class="btn btn-circle primary rounded-1"
  classes="primary rounded-1"
  content="I"
>
  <span>
    I
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Disabled 1`] = `
<button
  class="btn disabled primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Large 1`] = `
<button
  class="btn btn-large primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Normal 1`] = `
<button
  class="btn primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline 1`] = `
<button
  class="btn btn-outline txt-airforce rounded-1"
  classes="txt-airforce rounded-1"
  content="Button"
>
  <span
    class="btn-outline-text"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline Invert 1`] = `
<button
  class="btn btn-outline txt-blue txt-light-3 rounded-1"
  classes="txt-blue txt-light-3 rounded-1"
  content="Button"
>
  <span
    class="btn-outline-text btn-outline-invert"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline Opening 1`] = `
<button
  class="btn btn-outline btn-opening txt-airforce rounded-1"
  classes="txt-airforce rounded-1"
  content="Button"
>
  <span
    class="btn-outline-text"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Press 1`] = `
<button
  class="btn btn-press primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Small 1`] = `
<button
  class="btn btn-small primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Large 1`] = `
<div
  class="btn-group btn-group-large"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Normal 1`] = `
<div
  class="btn-group"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Rounded 1`] = `
<div
  class="btn-group rounded-1"
  classes="rounded-1"
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Small 1`] = `
<div
  class="btn-group btn-group-small"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Vertical 1`] = `
<div
  class="btn-group btn-group-vertical"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Vertical Large 1`] = `
<div
  class="btn-group btn-group-vertical btn-group-large"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Vertical Rounded 1`] = `
<div
  class="btn-group btn-group-vertical rounded-1"
  classes="rounded-1"
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Vertical Small 1`] = `
<div
  class="btn-group btn-group-vertical btn-group-small"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/Collapsible Auto Close 1`] = `
<div
  class="sidenav shadow-1 sidenav-fixed"
  style="transition-duration: 300ms;"
>
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link"
  >
    Collapse
  </a>
   
  <div
    class="collapsible"
    content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
    style="transition-duration: 300ms; overflow: visible;"
  >
    <a
      class="sidenav-link"
    >
      Collapsed 1
    </a>
     
    <a
      class="sidenav-link"
    >
      Collapsed 2
    </a>
  </div>
   
  <a
    class="sidenav-link"
  >
    Collapse 2
  </a>
   
  <div
    class="collapsible"
    content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
    style="transition-duration: 300ms; overflow: visible;"
  >
    <a
      class="sidenav-link"
    >
      Collapsed 1
    </a>
     
    <a
      class="sidenav-link"
    >
      Collapsed 2
    </a>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Collapsible In Sidenav 1`] = `
<div
  class="sidenav shadow-1 sidenav-fixed"
  style="transition-duration: 300ms;"
>
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link"
  >
    Collapse
  </a>
   
  <div
    class="collapsible"
    content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
    style="transition-duration: 300ms; overflow: visible;"
  >
    <a
      class="sidenav-link"
    >
      Collapsed 1
    </a>
     
    <a
      class="sidenav-link"
    >
      Collapsed 2
    </a>
  </div>
   
  <a
    class="sidenav-link"
  >
    Collapse 2
  </a>
   
  <div
    class="collapsible"
    content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
    style="transition-duration: 300ms; overflow: visible;"
  >
    <a
      class="sidenav-link"
    >
      Collapsed 1
    </a>
     
    <a
      class="sidenav-link"
    >
      Collapsed 2
    </a>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Collapsible Normal 1`] = `
<div
  class="collapsible"
  content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
  style="transition-duration: 300ms; overflow: visible;"
>
  <span>
    <div
      class="blue p-3"
    >
      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.
    </div>
  </span>
</div>
`;

exports[`Storyshots Axentix/Components/Dropdown Constrained 1`] = `
<div
  class="dropdown dropdown-anim-none"
  content="<div class=\\"dropdown-item\\">Hello</div>
      <div class=\\"dropdown-item\\">Hello number 2</div>"
>
  <button
    class="btn btn blue"
  >
    Trigger dropdown
  </button>
   
  <div
    class="dropdown-content dropdown-constrain-width"
    style="max-height: auto;"
  >
     
    <span
      class="white"
    >
      <div
        class="dropdown-item"
      >
        Hello
      </div>
      
      
      <div
        class="dropdown-item"
      >
        Hello number 2
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Dropdown Fade 1`] = `
<div
  class="dropdown dropdown-anim-fade"
  content="<div class=\\"dropdown-item\\">Hello</div>
      <div class=\\"dropdown-item\\">Hello number 2</div>"
  style="transition-duration: 300ms;"
>
  <button
    class="btn btn blue"
  >
    Trigger dropdown
  </button>
   
  <div
    class="dropdown-content"
    style="max-height: auto;"
  >
     
    <span
      class="white"
    >
      <div
        class="dropdown-item"
      >
        Hello
      </div>
      
      
      <div
        class="dropdown-item"
      >
        Hello number 2
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Dropdown Hover 1`] = `
<div
  class="dropdown dropdown-anim-none"
  content="<div class=\\"dropdown-item\\">Hello</div>
      <div class=\\"dropdown-item\\">Hello number 2</div>"
>
  <button
    class="btn btn blue"
  >
    Trigger dropdown
  </button>
   
  <div
    class="dropdown-content"
    style="max-height: auto;"
  >
     
    <span
      class="white"
    >
      <div
        class="dropdown-item"
      >
        Hello
      </div>
      
      
      <div
        class="dropdown-item"
      >
        Hello number 2
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Dropdown Normal 1`] = `
<div
  class="dropdown dropdown-anim-none"
  content="<div class=\\"dropdown-item\\">Hello</div>
      <div class=\\"dropdown-item\\">Hello number 2</div>"
>
  <button
    class="btn btn blue"
  >
    Trigger dropdown
  </button>
   
  <div
    class="dropdown-content"
    style="max-height: auto;"
  >
     
    <span
      class="white"
    >
      <div
        class="dropdown-item"
      >
        Hello
      </div>
      
      
      <div
        class="dropdown-item"
      >
        Hello number 2
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Chips 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
        value=""
      >
         
        <input
          class="form-autocomplete-input"
          type="text"
        />
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Chips Closable 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
        value=""
      >
         
        <input
          class="form-autocomplete-input"
          type="text"
        />
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Multiple 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
        value=""
      >
         
        <input
          class="form-autocomplete-input"
          type="text"
        />
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Normal 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose an option
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <input
        class="form-control custom-select"
        type="text"
        value=""
      />
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Single Line 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select single-line"
        value=""
      >
         
        <input
          class="form-autocomplete-input"
          type="text"
        />
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Checkbox 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="checkbox"
      />
       
      <span
        class=""
      >
        <span>
          Ok
        </span>
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Full Material Radio 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class="full"
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class="full"
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class="full"
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Material Checkbox 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="checkbox"
      />
       
      <span
        class=""
      >
        <span>
          Ok
        </span>
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Material Radio 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class=""
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class=""
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class=""
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Radio 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
      />
       
      <span
        class=""
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
      />
       
      <span
        class=""
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
      />
       
      <span
        class=""
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/File Multiple 1`] = `
<form
  class=""
>
  <div
    class="form-file"
  >
    <label
      class="btn airforce dark-1 rounded-1 shadow-1"
      for="input"
    >
      Upload
    </label>
     
    <input
      classes=""
      id="input"
      multiple="multiple"
      type="file"
    />
     
    <div
      class="form-file-path"
    />
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/File Normal 1`] = `
<form
  class=""
>
  <div
    class="form-file"
  >
    <label
      class="btn airforce dark-1 rounded-1 shadow-1"
      for="input"
    >
      Upload
    </label>
     
    <input
      classes=""
      id="input"
      type="file"
    />
     
    <div
      class="form-file-path"
    />
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Both 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group rounded-1"
      classes="rounded-1"
    >
      <span
        class="form-group-text bd-1 bd-solid bd-r-0 bd-grey bd-light-1"
      >
        @
      </span>
       
      <input
        class="form-control"
        type="text"
        value=""
      />
       
      <span
        class="form-group-text bd-1 bd-solid bd-l-0 bd-grey bd-light-1 grey light-3"
      >
        useaxentix.com
      </span>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Prefix 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group"
      classes=""
    >
      <span
        class="form-group-text"
      >
        @
      </span>
       
      <input
        class="form-control"
        type="text"
        value=""
      />
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Suffix 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group"
      classes=""
    >
      <input
        class="form-control"
        type="text"
        value=""
      />
       
      <span
        class="form-group-text"
      >
        @
      </span>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Basic 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Basic Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Disabled 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    disabled="disabled"
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      disabled="disabled"
      placeholder=""
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Disabled Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    disabled="disabled"
    fieldclasses=""
    material="true"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      disabled="disabled"
      placeholder=""
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Helper 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
      value=""
    />
     
    <span
      class="form-helper"
    >
      This is a helper text.
    </span>
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Helper Custom 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
      value=""
    />
     
    <span
      class="form-helper text-red text-center"
    >
      Error message.
    </span>
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Inline 1`] = `
<form
  class=""
>
  <div
    class="form-field form-inline"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Multiple Select 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    multiple="multiple"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="select"
    type=""
  >
    <label>
      Select
    </label>
     
    <select
      class="form-control"
      multiple="multiple"
      value=""
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Placeholder 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder="Axentix <3"
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder="Axentix <3"
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Placeholder Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder="Axentix <3"
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder="Axentix <3"
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Readonly 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    readonly="readonly"
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      readonly="readonly"
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Readonly Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    readonly="readonly"
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      readonly="readonly"
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Select 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="select"
    type=""
  >
    <label>
      Select
    </label>
     
    <select
      class="form-control"
      value=""
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Select Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="select"
    type=""
  >
    <label>
      Select
    </label>
     
    <select
      class="form-control"
      value=""
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Textarea 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="textarea"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <textarea
      class="form-control"
      placeholder=""
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Textarea Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="textarea"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <textarea
      class="form-control"
      placeholder=""
      type="text"
      value=""
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Chips 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
        value=""
      />
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Chips Closable 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
        value=""
      />
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Multiple 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <!---->
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Normal 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose an option
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
        value=""
      >
        
      
    
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Single Line 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select single-line"
        value=""
      />
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Custom Color 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="form-slider"
        style="--ax-form-switch-active-color: #000000;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Large 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="form-slider form-slider-large"
        style="--ax-form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Normal 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="form-slider"
        style="--ax-form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Small 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="form-slider form-slider-small"
        style="--ax-form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Lightbox Normal 1`] = `<!--function (a, b, c, d) { return createElement(vm, a, b, c, d, true); }-->`;

exports[`Storyshots Axentix/Components/Modal Bouncing 1`] = `
<div
  class="modal modal-bouncing white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Falling 1`] = `
<div
  class="modal modal-falling white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Footer 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer="Footer content"
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <div
    class="modal-footer"
  >
    <span>
      Footer content
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Modal Header 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header="Header title"
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <div
    class="modal-header"
  >
    <span>
      Header title
    </span>
  </div>
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Normal 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Pagination Custom Arrows 1`] = `
<ul
  class="pagination"
>
  <li
    class="txt-blue arrow pb-1 disabled"
  >
    <a>
      ←
    </a>
  </li>
   
  <li
    class="txt-blue disabled"
  >
    <a>
      prev
    </a>
  </li>
   
  <div
    class="d-flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        5
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        6
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="txt-blue"
  >
    <a>
      next
    </a>
  </li>
   
  <li
    class="arrow txt-blue pb-1"
  >
    <a>
      →
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Custom Items 1`] = `
<ul
  class="pagination"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="d-flex"
  >
    <li
      class="active"
    >
      <a>
         1 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         2 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         3 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         4 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         5 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         6 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         10 
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Large 1`] = `
<ul
  class="pagination pagination-large"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="d-flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        5
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        6
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Max Visible 1`] = `
<ul
  class="pagination"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="d-flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Normal 1`] = `
<ul
  class="pagination"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="d-flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        5
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        6
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Small 1`] = `
<ul
  class="pagination pagination-small"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="d-flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        5
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        6
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Totally Custom 1`] = `
<ul
  class="pagination"
>
  <li
    class="txt-blue arrow pb-1 grey light-4 bd-solid bd-1 bd-grey bd-light-3 disabled"
  >
    <a>
      ←
    </a>
  </li>
   
  <li
    class="txt-blue grey light-4 bd-solid bd-1 bd-grey bd-light-3 disabled"
  >
    <a>
      prev
    </a>
  </li>
   
  <div
    class="d-flex"
  >
    <li
      class="active"
    >
      <a>
         1 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         2 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         3 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         4 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         5 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         6 
      </a>
    </li>
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <!---->
  </div>
  <div
    class="d-flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="d-flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         10 
      </a>
    </li>
  </div>
   
  <li
    class="txt-blue grey light-4 bd-solid bd-1 bd-grey bd-light-3"
  >
    <a>
      next
    </a>
  </li>
   
  <li
    class="arrow txt-blue pb-1 grey light-4 bd-solid bd-1 bd-grey bd-light-3"
  >
    <a>
      →
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Sidenav Large 1`] = `
<div
  class="sidenav airforce shadow-1"
  classes="airforce shadow-1"
  large="true"
  style="transition-duration: 300ms;"
>
  <div
    class="sidenav-header"
  >
    
      Sidenav header
    
  </div>
   
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <div
    class="sidenav-footer"
  >
    
      Sidenav footer
    
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Sidenav Normal 1`] = `
<div
  class="sidenav airforce shadow-1"
  classes="airforce shadow-1"
  style="transition-duration: 300ms;"
>
  <div
    class="sidenav-header"
  >
    
      Sidenav header
    
  </div>
   
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <div
    class="sidenav-footer"
  >
    
      Sidenav footer
    
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Sidenav Right Aligned 1`] = `
<div
  class="sidenav airforce shadow-1"
  classes="airforce shadow-1"
  rightaligned="true"
  style="transition-duration: 300ms;"
>
  <div
    class="sidenav-header"
  >
    
      Sidenav header
    
  </div>
   
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <div
    class="sidenav-footer"
  >
    
      Sidenav footer
    
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tab Arrow 1`] = `
<div
  class="tab shadow-1"
  classes="shadow-1"
  style="transition-duration: 300ms;"
>
  <div
    class="tab-arrow"
  >
    <div
      class="tab-prev shadow-1"
    >
       ‹ 
    </div>
     
    <ul
      class="tab-menu"
      style="--ax-tab-bar-left-offset: 0; --ax-tab-bar-right-offset: 0;"
    >
      <li
        class="tab-link"
      >
        <a
          href="#tab1"
        >
          Tab 1
        </a>
      </li>
       
      <li
        class="tab-link"
      >
        <a
          href="#tab2"
        >
          Tab 2
        </a>
      </li>
       
      <li
        class="tab-link"
      >
        <a
          href="#tab3"
        >
          Long tab content long tab content 
        </a>
      </li>
    </ul>
     
    <div
      class="tab-next shadow-1"
    >
       › 
    </div>
  </div>
    
  <div
    style="display: none;"
  >
     Content 1 
  </div>
   
  <div
    style="display: none;"
  >
     Content 2 
  </div>
   
  <div
    style="display: none;"
  >
     This is the 3rd content 
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tab Full Width 1`] = `
<div
  class="tab tab-full-width shadow-1"
  classes="shadow-1"
  style="transition-duration: 300ms;"
>
  <ul
    class="tab-menu"
    style="--ax-tab-bar-left-offset: 0; --ax-tab-bar-right-offset: 0;"
  >
    <li
      class="tab-link"
    >
      <a
        href="#tab1"
      >
        Tab 1
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab2"
      >
        Tab 2
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab3"
      >
        Long tab content long tab content 
      </a>
    </li>
  </ul>
    
  <div
    style="display: none;"
  >
     Content 1 
  </div>
   
  <div
    style="display: none;"
  >
     Content 2 
  </div>
   
  <div
    style="display: none;"
  >
     This is the 3rd content 
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tab Normal 1`] = `
<div
  class="tab shadow-1"
  classes="shadow-1"
  style="transition-duration: 300ms;"
>
  <ul
    class="tab-menu"
    style="--ax-tab-bar-left-offset: 0; --ax-tab-bar-right-offset: 0;"
  >
    <li
      class="tab-link"
    >
      <a
        href="#tab1"
      >
        Tab 1
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab2"
      >
        Tab 2
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab3"
      >
        Long tab content long tab content 
      </a>
    </li>
  </ul>
    
  <div
    style="display: none;"
  >
     Content 1 
  </div>
   
  <div
    style="display: none;"
  >
     Content 2 
  </div>
   
  <div
    style="display: none;"
  >
     This is the 3rd content 
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tab Without Active Bar 1`] = `
<div
  class="tab shadow-1"
  classes="shadow-1"
  style="transition-duration: 300ms;"
>
  <ul
    class="tab-menu"
    style="--ax-tab-bar-left-offset: 0; --ax-tab-bar-right-offset: 0;"
  >
    <li
      class="tab-link"
    >
      <a
        href="#tab1"
      >
        Tab 1
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab2"
      >
        Tab 2
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab3"
      >
        Long tab content long tab content 
      </a>
    </li>
  </ul>
    
  <div
    style="display: none;"
  >
     Content 1 
  </div>
   
  <div
    style="display: none;"
  >
     Content 2 
  </div>
   
  <div
    style="display: none;"
  >
     This is the 3rd content 
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Bottom 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Left 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Right 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Top 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;

exports[`Storyshots Example/Button Large 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--large"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  class="storybook-button storybook-button--primary storybook-button--medium"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--medium"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--small"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    class="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
           
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
           
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
       
      <h1>
        Acme
      </h1>
    </div>
     
    <div>
      <button
        class="storybook-button storybook-button--secondary storybook-button--small"
        type="button"
      >
        Log out
      </button>
       
      <!---->
       
      <!---->
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    class="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
           
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
           
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
       
      <h1>
        Acme
      </h1>
    </div>
     
    <div>
      <!---->
       
      <button
        class="storybook-button storybook-button--secondary storybook-button--small"
        type="button"
      >
        Log in
      </button>
       
      <button
        class="storybook-button storybook-button--primary storybook-button--small"
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      class="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
             
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
             
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
         
        <h1>
          Acme
        </h1>
      </div>
       
      <div>
        <button
          class="storybook-button storybook-button--secondary storybook-button--small"
          type="button"
        >
          Log out
        </button>
         
        <!---->
         
        <!---->
      </div>
    </div>
  </header>
   
  <section>
    <h2>
      Pages in Storybook
    </h2>
     
    <p>
      
      We recommend building UIs with a
      
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
      
      process starting with atomic components and ending with pages.
    
    </p>
     
    <p>
      
      Render pages with mock data. This makes it easy to build and review page states without
      needing to navigate to them in your app. Here are some handy patterns for managing page data
      in Storybook:
    
    </p>
     
    <ul>
      <li>
        
        Use a higher-level connected component. Storybook helps you compose such data from the
        "args" of child component stories
      
      </li>
       
      <li>
        
        Assemble data in the page component from your services. You can mock these services out
        using Storybook.
      
      </li>
    </ul>
     
    <p>
      
      Get a guided tutorial on component-driven development at
      
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      
      . Read more in the
      
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      
      .
    
    </p>
     
    <div
      class="tip-wrapper"
    >
      <span
        class="tip"
      >
        Tip
      </span>
      
      Adjust the width of the canvas with the
      
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      
      Viewports addon in the toolbar
    
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      class="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
             
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
             
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
         
        <h1>
          Acme
        </h1>
      </div>
       
      <div>
        <!---->
         
        <button
          class="storybook-button storybook-button--secondary storybook-button--small"
          type="button"
        >
          Log in
        </button>
         
        <button
          class="storybook-button storybook-button--primary storybook-button--small"
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
   
  <section>
    <h2>
      Pages in Storybook
    </h2>
     
    <p>
      
      We recommend building UIs with a
      
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
      
      process starting with atomic components and ending with pages.
    
    </p>
     
    <p>
      
      Render pages with mock data. This makes it easy to build and review page states without
      needing to navigate to them in your app. Here are some handy patterns for managing page data
      in Storybook:
    
    </p>
     
    <ul>
      <li>
        
        Use a higher-level connected component. Storybook helps you compose such data from the
        "args" of child component stories
      
      </li>
       
      <li>
        
        Assemble data in the page component from your services. You can mock these services out
        using Storybook.
      
      </li>
    </ul>
     
    <p>
      
      Get a guided tutorial on component-driven development at
      
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      
      . Read more in the
      
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      
      .
    
    </p>
     
    <div
      class="tip-wrapper"
    >
      <span
        class="tip"
      >
        Tip
      </span>
      
      Adjust the width of the canvas with the
      
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      
      Viewports addon in the toolbar
    
    </div>
  </section>
</article>
`;
